fix: fix hero-heading overlap, remove opacity on menu hover

--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ menu :is(a:hover, a:focus, a:active) {
   color: var(--primary-color);
   background-size: 100% 0.1em;
   background-position-x: 0%;
+  opacity: 1;
 }
 
 menu a.logo-name {
@@ -239,6 +240,10 @@ section {
 /* Hero */
 
 .hero__image {
+  overflow: hidden;
+}
+
+.hero__image img {
   aspect-ratio: 16 / 10;
 }
 
@@ -422,7 +427,7 @@ section {
     width: 3rem;
   }
 
-  .hero__image {
+  .hero__image img {
     aspect-ratio: 4 / 3;
     grid-column: 1;
   }
